--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
-title:            Site Title
-description:      Describe your website here.
-disqus_shortname: hpstrtheme
+title:            PeopleSoft
+description:      PeopleSoft Blog.
+disqus_shortname: Demo
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
 # When testing locally leave blank or use http://localhost:4000
-url:
+url: http://www.goodwikis.com
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Nilambar Thakur
   avatar:         avatar.jpg
-  bio:            "Your bio goes here. It shouldn't be super long but a good two sentences or two should suffice."
-  email:          you@email.com
+  bio:            "PeopleSoft Developer."
+  email:          neelambar@gmail.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
   facebook:       
