--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:            PeopleSoft
 description:      PeopleSoft Blog.
-disqus_shortname: Demo
+disqus_shortname: goodwikis
 reading_time:     true
 words_per_minute: 200
 # Your site's domain goes here (eg: //mmistakes.github.io, http://mademistakes.com, etc)
